# Zeno

./: CMakeLists.txt  README.md
compiler/stage0/: CMakeLists.txt
compiler/stage0/src/: main.cpp
docs/: BOOTSTRAP.md  COMPILATION.md  COMPTIME.md  CONCURRENCY.md  DESIGN_AUDIT.md  FFI.md  GRAMMAR.md  IR.md  LAYOUT.md  MANIFEST.md  MODULES.md  PACKAGE.md  PERFORMANCE.md  SAFETY.md  SPEC.md  STAGE0_STATUS.md  STDLIB.md  TESTING.md  V01_SUBSET.md
examples/: file_destroy.zn  generic_writer.zn  hello.zn  raii_buffer.zn  result_and_closure.zn  thread_move.zn
lib/zeno/alloc/: README.md  Zeno.toml
lib/zeno/core/: README.md  Zeno.toml
lib/zeno/std/: README.md  Zeno.toml
runtime/stage0/: README.md
tests/spec/compile-fail/: 001_use_after_move.zn  002_return_local_access.zn  003_overlapping_writable_access.zn  004_hidden_allocation.zn  005_raw_ffi.zn  006_unsafe_block.zn  007_const_oob_index.zn  008_writable_access_thread_escape.zn  009_trust_does_not_disable_checks.zn  010_move_parameter_requires_move.zn  011_array_slice_field.zn  012_vector_push_with_live_slice.zn  013_box_array_slice.zn  014_shared_array_slice.zn  015_vector_of_array_slice.zn  016_static_array_slice.zn  017_thread_array_slice_escape.zn  018_return_read_parameter_as_owner.zn  019_box_read_parameter.zn  020_mut_self_requires_writable_receiver.zn  021_use_after_move_self.zn  022_read_self_cannot_mutate.zn  023_move_field_from_read_self.zn  024_move_field_from_mut_self.zn  025_move_field_from_destroy_type_outside.zn  026_use_field_after_move.zn  027_use_object_after_field_move.zn  028_destroy_try.zn  029_destroy_calls_result_api.zn  030_non_copy_assignment_without_move.zn  031_array_clone_without_allocator.zn  032_dynamic_self_return_interface.zn  033_dynamic_generic_interface_method.zn  034_dynamic_move_self_interface_method.zn  035_interface_access_field.zn  036_vector_of_interface_access.zn  037_move_bare_interface_parameter.zn  038_shared_interface_mut_method.zn  039_thread_non_send_destroy.zn  040_box_interface_missing_send_thread.zn  (+159 more)
tests/spec/compile-pass/: 001_move_raii.zn  002_generic_interface.zn  003_result_try.zn  004_closure_no_escape.zn  005_thread_move.zn  006_interface_dispatch.zn  007_trust_ffi.zn  008_default_read_access.zn  009_array_slice_return_from_parameter.zn  012_self_receivers.zn  (+81 more)
tools/: build_stage0.sh
(+257 files in other folders)
